--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,30 @@
 *.mp3
 *.avi
 __pycache__/
+
+# Distribution / packaging
+.Python
+build/
+douyin-*/
+examples/checkpoints/
+examples/events/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+*.pyc
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
